--- a/GraphicsProject.cbp
+++ b/GraphicsProject.cbp
@@ -40,13 +40,19 @@
 			<Add library="lib/libSDLmain.a" />
 			<Add directory="lib" />
 		</Linker>
+		<Unit filename="button.cpp" />
+		<Unit filename="button.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="menu.cpp" />
 		<Unit filename="menu.hpp" />
 		<Unit filename="number.cpp" />
 		<Unit filename="number.hpp" />
+		<Unit filename="static_text.cpp" />
+		<Unit filename="static_text.hpp" />
 		<Unit filename="widgets.cpp" />
 		<Unit filename="widgets.hpp" />
+		<Unit filename="window.cpp" />
+		<Unit filename="window.hpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
